[package]
name = "udfs"
version = "0.0.1"
authors = ["radogost"]
edition = "2018"

[[bin]]
name = "datanode"
path = "src/bin/datanode.rs"

[[bin]]
name = "namenode"
path = "src/bin/namenode.rs"

[dependencies]
bytes = "1.0"
clap = "2.33"
prost = "0.7"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.5"
tonic = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
tempdir = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.6", features = ["io"] }

[build-dependencies]
tonic-build = "0.3"
